scss/_pages.scss
// Individual page styles

// index.html
.index {
//	background-color: #E6E6E6;

	.see-more {
		font-size: 110%;
		text-align: right;
	}

	.leftcontent {
		h2 { font-size: 4rem; color: #999; }
		@media (min-width: $screen-md-min) {
			h2 { font-size: 5rem; }
		}
	}

	.no-events {
		@extend .text-center;
		padding: 2em;
		border: 3px dotted lighten($brand-primary, 15%);
	}
}

// events.html
.xhr-loading {
	font-size: 30px;
	padding: 10px;
	top: 40px;
	left: 40px;
	position: fixed;
	z-index: 2000;

	border-radius: 40px;
	background-color: rgba(255, 255, 255, 0.75);
	box-shadow: 0 0 5px 5px rgba(255, 255, 255, 0.75);
}

.event_calendar {
	.modal-dialog {
		max-width: 750px;
		a { background-color: #fff; }

		.close {
			opacity: 0.8;
			text-shadow: none;
			color: black;
			padding: 24px 10px;

			@include transition(color 0.3s ease);

			&:hover { color: #fff; }
		}
	}

	.fc-event {
		padding: 3px 4px;
		border-radius: 0;
		cursor: pointer;
	}

	.fc-day-grid-event > .fc-content {
		white-space: normal;
	}

	th { background-color: #eee; }

	// Screen centring solution
	// thanks http://stackoverflow.com/questions/18422223/bootstrap-3-modal-vertical-position-center
	@media only screen and (min-width: 768px) {
		.modal {
			text-align: center;
		}
		.modal:before {
			content: " ";
			display: inline-block;
			height: 80%;
			vertical-align: middle;
		}
		.modal-dialog {
			display: inline-block;
			text-align: left;
			vertical-align: middle;
		}
		.modal.fade .modal-dialog {
			@include scale(0.9);
			@include transition(all 0.3s ease);
			opacity: 0;
		}
		.modal.fade.in .modal-dialog {
			@include scale(1);
			opacity: 1;
		}
	}
}

// event_[add|edit].html
.event_form {

	input[type="submit"] {
		margin: 3rem 0;
	}

	// This is to stop excess whitespace
	@media (min-width: $screen-md-min) {
		.date-input .form-group {
			margin-bottom: 0;
		}
	}

	.bootstrap-datetimepicker-widget table td.disabled {
		color: #ccc;
	}

	// Some styling to get the input element to appear correctly
	// This bit is just kind of gross but required cos of the way typeahead.js works :(
	span.twitter-typeahead {
		width: 100%;
		display: table-cell !important;	// If we don't !important, it gets overriden by script

		input#location_text { // This much specificity overrides Bootstrap
			border-radius: $border-radius-base;
			@include border-left-radius(0);
		}
	}

	.tt-dropdown-menu {
		background-color: #fff; border: 1px solid #aaa; width: 500px;
		p { margin: 0; padding: 10px; }
	}

	.tt-suggestion.tt-cursor { background-color: #ddd; }
	.tt-selected { background-color: lighten($brand-success, 40%) !important; }
}

// event_page.html
.event {
	.breadcrumb { margin-bottom: $line-height-computed / 2; }

	.button-list {
		margin-bottom: $line-height-computed/2;
		.btn {
			margin-right: 0.5em;
		}
	}

	.header-title {
		color: black;
		font-weight: 700;
		font-size: floor(($headings-size-base * 3.2));
	}

	.header-date {
		color: black;
		font-weight: 200;
		font-size: 30px;
		margin-bottom: 20px;
	}

	.img {
		background: url("http://api.ning.com/files/a8yFieGq6xqi92JtUXmbI7z6w59H2RKgNzMtZtvq2MaNfpzVwuExGqJ4iZ1lvscEZ8jebnC8V5wMpK*6yLPJWzMyvMR1oCVC/223470_1031354102634_1188814802_30087004_1015_n2.jpg") #eee no-repeat;
		background-size: cover;
		height: 150px;
	}
}

// login.html
.login {
	background-color: #eee;
	footer { display: none; }

	#loginbox {
		margin: 0 1em;
		@include make-sm-column(6);

		// Small devices (tablets, 768px and up)
		@media (min-width: $screen-sm-min) {
			@include make-sm-column-offset(3);
			margin-top: 2em;
		}

		padding: 1.5em 2em;
		box-shadow: 0 1px 1px 0 gray;
		background-color: #fff;
	}
}

// locations.html
.locations {
	td:nth-child(2) { min-width: 11em; }
	td h4 { margin-top: 0; }
}

// about.html
.about {
	#contents {
		width: 15em; margin-top: 3em; border-top: 2px solid $brand-primary;
		ul { margin-top: 1em; margin-left: 0; padding-left: 0; list-style-type: none; }
		li { margin-bottom: 5px; margin-left: 10px; }
	}
}

// admin.html
.admin {
	.blurb { max-width: 45em; }
	.date { min-width: 12em; }
}

// feeds.html
.admin.feeds {

	// Only do two-column layout on bigger screens
	@media (min-width: $screen-md-min) {
		.feedlist { // Masonry container
			-moz-column-count: 2;
			-moz-column-gap: 1em;
			-webkit-column-count: 2;
			-webkit-column-gap: 1em;
			column-count: 2;
			column-gap: 1em;
		}
	}

	.feed {
		display: inline-block;
		margin: 0 0 1em;
		width: 100%;

		padding: $line-height-computed / 2 10px 0 10px;
		border-radius: 4px;
		border: 1px solid $brand-primary;
	}

	.feed-error {
		border-color: $state-danger-border;
		background: $state-danger-bg;
	}
}

